<?php
namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class CourtPricing extends Model
{
    protected $guarded = ['id'];
    public function court(): BelongsTo { return $this->belongsTo(Court::class); }
}